objects/Sales_Header__c.object
<CustomObject>
    <description>顧客、営業担当者単位の売上集計用データ</description>
    <fields>
        <fullName>Field10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>出荷先取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>売上HEADER</relationshipLabel>
        <relationshipName>HField10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>販売オーダ</label>
        <referenceTo>SalesOrder__c</referenceTo>
        <relationshipLabel>売上HEADER</relationshipLabel>
        <relationshipName>HField11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>要素コード</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>920</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>921</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>930</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>932</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>933</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>934</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>939</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>952</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>953</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>961</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>962</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>965</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>966</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>967</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>968</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVC__c</fullName>
        <formula>if (text(Field3__c) = &apos;SVC&apos;, Field4__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SVC金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>売上H</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field7__c</columns>
        <columns>Field8__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field10__c</columns>
        <columns>Field11__c</columns>
        <columns>Field9__c</columns>
        <columns>Field4__c</columns>
        <columns>Field6__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All_This_FY</fullName>
        <columns>NAME</columns>
        <columns>Field7__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field9__c</columns>
        <columns>Field4__c</columns>
        <columns>Field38__c</columns>
        <columns>Field37__c</columns>
        <columns>Field21__c</columns>
        <columns>Field6__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>THIS_FISCAL_YEAR</value>
        </filters>
        <label>当会計年度_国内外</label>
    </listViews>
    <listViews>
        <fullName>All_This_FY_D</fullName>
        <columns>NAME</columns>
        <columns>Field7__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field9__c</columns>
        <columns>Field4__c</columns>
        <columns>Field38__c</columns>
        <columns>Field37__c</columns>
        <columns>Field21__c</columns>
        <columns>Field6__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>THIS_FISCAL_YEAR</value>
        </filters>
        <filters>
            <field>Field2__c</field>
            <operation>equals</operation>
            <value>国内</value>
        </filters>
        <label>当会計年度_国内</label>
    </listViews>
    <listViews>
        <fullName>All_This_FY_O</fullName>
        <columns>NAME</columns>
        <columns>Field7__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field9__c</columns>
        <columns>Field4__c</columns>
        <columns>Field38__c</columns>
        <columns>Field37__c</columns>
        <columns>Field21__c</columns>
        <columns>Field6__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>THIS_FISCAL_YEAR</value>
        </filters>
        <filters>
            <field>Field2__c</field>
            <operation>equals</operation>
            <value>海外</value>
        </filters>
        <label>当会計年度_海外</label>
    </listViews>
    <listViews>
        <fullName>All_This_FY_test</fullName>
        <columns>NAME</columns>
        <columns>Field7__c</columns>
        <columns>Field8__c</columns>
        <columns>Field2__c</columns>
        <columns>Field3__c</columns>
        <columns>Field9__c</columns>
        <columns>Field4__c</columns>
        <columns>Field38__c</columns>
        <columns>Field37__c</columns>
        <columns>Field21__c</columns>
        <columns>Field6__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field8__c</field>
            <operation>equals</operation>
            <value>LAST_FISCAL_YEAR</value>
        </filters>
        <filters>
            <field>Field15__c</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>Field2__c</field>
            <operation>equals</operation>
            <value>国内</value>
        </filters>
        <filters>
            <field>Field3__c</field>
            <operation>equals</operation>
            <value>自社品</value>
        </filters>
        <label>_[A.yam] This FY</label>
    </listViews>
    <nameField>
        <label>売上H名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>